cmake_minimum_required(VERSION 3.1.0)
cmake_policy(SET CMP0076 NEW)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(QSkinny)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

find_package(Qt5 COMPONENTS Widgets Quick REQUIRED)

set_property(TARGET Qt5::Core PROPERTY INTERFACE_COMPILE_FEATURES "")

include_directories(${Qt5Gui_PRIVATE_INCLUDE_DIRS} ${Qt5Core_PRIVATE_INCLUDE_DIRS}  ${Qt5Quick_PRIVATE_INCLUDE_DIRS})

add_subdirectory(src)
